# nspawn-ui

./: .gitignore  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  api_backend.py  container_manager.py  index.html  install.sh  installer.sh
api/: main.py  requirements.txt
backend/: main.py  requirements.txt
backend/api/: __init__.py  auth.py  containers.py  logs.py  network.py  ssh.py  system.py
backend/core/: __init__.py  config.py
backend/models/: __init__.py
backend/services/: __init__.py  container_service.py
config/: nspawn-vps.conf  zenithstack.env.example
docs/: API.md  BUGFIX_SYSTEMD_NSPAWN.md  DEVELOPER_GUIDE.md  ROOT_PASSWORD_FIX_SUMMARY.md  VPS_CREATION_GUIDE.md
frontend/: index.html  login.html  login.js  script.js
frontend/templates/: create_vps.html  (+5 more)
installer/: install.sh
scripts/: install.sh  installer.sh  setup_network.sh
self-hosted-container-manager/: README.md
self-hosted-container-manager/backend/: README.md  pyproject.toml
self-hosted-container-manager/backend/src/: main.py
self-hosted-container-manager/backend/src/api/: containers.py  logs.py  networking.py
self-hosted-container-manager/backend/src/core/: docker_in_ct.py  network_manager.py  nspawn_manager.py  ssh_setup.py
self-hosted-container-manager/backend/src/schemas/: container.py
self-hosted-container-manager/backend/tests/: test_nspawn_manager.py
systemd/: bridge.service  ctmgr-api.service  nspawn-ui.service
tests/: integration_test.sh  verify.sh
utils/: containers.py  validate_build.sh
web/: index.html
webui/: index.html  script.js
(+29 files in other folders)
