[tool]
name = "self-hosted-container-manager"
version = "0.1.0"
description = "A self-hosted container manager using systemd-nspawn with a Bootstrap-based WebUI."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "httpx",
    "sqlalchemy",
    "asyncpg",
    "docker",
    "python-dotenv"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"